# witness

./: LICENSE  README.md  WITNESS_SPEC_v0.1.md  WITNESS_SPEC_v0.2.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
schemas/: receipt-v0.1.schema.json  statement-v0.1.schema.json  statement-v0.2.schema.json
src/witness_cli/: __init__.py  _ulid.py  authority.py  cli.py  client.py  errors.py  keys.py  model.py  server.py  store.py  verify.py
test-vectors/: receipt-v0.1.json  sample-events.jsonl  vector-v0.1.json
tests/: test_authority.py  test_cli.py  test_server.py  test_statement_v02.py  test_verify.py
